<resources>
    <string name="dialogpretext">\Never have I ever \</string>
    <string name="room_code">Room Code:</string>
    <string name="i_have">I Have</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="i_have_not">I Have Not</string>
    <string name="question_will_be_here">Question will be here</string>
    <string name="_74">74</string>
    <string name="timer">Timer:</string>
    <string name="player_icon">Player Icon</string>
    <string name="player_6">Player 6</string>
    <string name="player_5">Player 5</string>
    <string name="player_4">Player 4</string>
    <string name="player_3">Player 3</string>
    <string name="player_2">Player 2</string>
    <string name="player_1">Player 1</string>
    <string name="selected">Selected</string>
    <string name="welcome_to_aa">Welcome To AA</string>
    <string name="change_name">Change Name</string>
    <string name="change_icon">Change Icon</string>
    <string name="logout">Logout</string>
    <string name="question_sets">Question Sets</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="room_code_here">Room Code Here</string>
    <string name="room_does_not_exist">Room does not Exist!</string>
    <string name="display_name">Display Name</string>
    <string name="something">Something</string>
    <string name="sound_off">Sound Off</string>
    <string name="sound_on">Sound On</string>
    <string name="email_or_password_is_incorrect">Email or Password is Incorrect</string>
    <string name="login_icon">Login Icon</string>
    <string name="register">register</string>
    <string name="log_in">log in</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="question_1">Question 1</string>
    <string name="edit">Edit</string>
    <string name="clear">Clear</string>
    <string name="button_background">Button Background</string>
    <string name="buttonimage">buttonimage</string>
    <string name="question_set_2">Question set 2</string>
    <string name="question_set_3">Question set 3</string>
    <string name="question_set_1">Question set 1</string>
    <string name="rename">Rename</string>
    <string name="select">Select</string>
    <string name="of_players_n_max_6_amp_min_2"><![CDATA[# of players \n (max 6 & min 2)]]></string>
    <string name="empty_incorrect_values">Empty/Incorrect values</string>
    <string name="avatar_icon">avatar icon</string>
    <string name="back">back</string>
    <string name="no_more_questions">No More Questions!</string>
    <string name="timer_waiting">Timer Waiting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="placeholder_x_coordinates">Placeholder X Coordinates</string>
    <string name="placeholder_y_coordinates">Placeholder Y Coordinates</string>
    <string name="placeholder_timer">Placeholder Timer</string>
    <string name="drunk_test">Drunk Test</string>
    <string name="instructions">Instructions:</string>
    <string name="_1_hold_the_device_flat_in_your_hand">1. Hold the device flat in your hand.</string>
    <string name="_2_walk_around_while_keeping_the_device_flat">2. Walk around while keeping the device flat.</string>
    <string name="seconds_remaining">"Seconds Remaining: "</string>
    <string name="never_have_i_ever">Never Have I Ever</string>
    <string name="chat_button">chat button</string>
    <string name="chatbt">chatbt</string>
    <string name="enter_your_message_here">Enter your message here…</string>
    <string name="loading_chat">Loading chat…</string>
</resources>