<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:minWidth="500dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="11dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="@color/Beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:text="@string/something"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="?android:attr/buttonBarButtonStyle"
            >
                <Button
                    android:id="@+id/editButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:backgroundTint="@color/LightGreen"
                    android:contentDescription="@string/buttonimage"
                    android:text="@string/edit"
                    android:textColor="@color/DarkGreen"
                    tools:ignore="DuplicateSpeakableTextCheck" />
                <Button
                    android:id="@+id/clearButton"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    style="?android:attr/buttonBarButtonStyle"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:backgroundTint="@color/LightPink"
                    android:text="@string/clear"
                    android:textColor="@color/DarkRed"
                    android:contentDescription="@string/something" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>