<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/glasses"
    android:orientation="vertical"
    tools:context="com.jldevelops.neverhaveiever.QuestionSets">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#6B5298"
            app:cardCornerRadius="20dp"
            app:cardElevation="11dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/question_set_card"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Qs1"
                    android:layout_width="195dp"
                    android:layout_height="63dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="80dp"
                    android:ems="10"
                    android:fontFamily="@font/bevan"

                    android:text="@string/question_set_1"
                    android:textColor="#1A1A1A"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/e1"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/edit"
                        android:textColor="#FFFFFF"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/r1"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/rename"
                        android:textColor="#FFFFFF"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/s1"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/select"
                        android:textColor="#FFFFFF"
                        tools:ignore="DuplicateSpeakableTextCheck" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#6B5298"
            app:cardCornerRadius="20dp"
            app:cardElevation="11dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/question_set_card"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Qs2"
                    android:layout_width="195dp"
                    android:layout_height="63dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="80dp"
                    android:ems="10"
                    android:fontFamily="@font/bevan"
                    android:text="@string/question_set_2"
                    android:textColor="#1A1A1A"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/e2"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/edit"
                        android:textColor="#FFFFFF" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/r2"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/rename"
                        android:textColor="#FFFFFF"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/s2"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/select"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:layout_gravity="center_horizontal"
            app:cardBackgroundColor="#6B5298"
            app:cardCornerRadius="20dp"
            app:cardElevation="11dp"
            app:cardUseCompatPadding="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/question_set_card"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Qs3"
                    android:layout_width="195dp"
                    android:layout_height="63dp"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="80dp"
                    android:ems="10"
                    android:fontFamily="@font/bevan"
                    android:text="@string/question_set_3"
                    android:textColor="#1A1A1A"
                    android:textSize="16sp" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/e3"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/edit"
                        android:textColor="#FFFFFF" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/r3"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/rename"
                        android:textColor="#FFFFFF" />
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/s3"
                        android:layout_width="130dp"
                        android:layout_height="48dp"
                        android:layout_marginVertical="10dp"
                        android:background="@drawable/question_set_btn"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="5"
                        android:text="@string/select"
                        android:textColor="#FFFFFF" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>
    
